[package]
name = "Hetu"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biodivine-lib-bdd = "0.5.17"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
num_cpus = "1.13.0"
lazy_static = "1.4.0"
mimalloc = "0.1.42"
heapsize = "0.4.2"
log = "0.4"
hashbrown = "0.14.5"
typed-arena = "2.0.1"
slab = "0.4.2"
once_cell = "1.19.0"
crossbeam = "0.8.4"
dashmap = "6.0.1"
ahash = "0.8.11"
fxhash = "0.2.1"
memmap2 = "0.5"
rustc-hash = { version = "2.0.0", optional = true }
seahash = { version = "4.0", optional = true }
wyhash = { version = "0.5", optional = true }


[features]
default = []
use_rustc_hash = ["rustc-hash"]
use_seahash = ["seahash"]
use_wyhash = ["wyhash"]
